--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,7 @@ starlette==0.38.5
 
 # For YAML config (if you want config.yaml support)
 PyYAML==6.0.2
+
+pandas==2.2.3
+jinja2==3.1.4
+python-multipart==0.0.6
